[package]
name = "procyon"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vega_lite_3 = {version = "0.2", optional = true}
vega_lite_4 = {git = "https://github.com/procyon-rs/vega_lite_4.rs.git", optional = true}
showata = "0.2"

[features]
default = ["vega_lite_4"]
