[package]
name = "procyon"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>", "Thomas Aubry <github.thomaub@gmail.com>"]
edition = "2018"

[dependencies]
vega_lite_3 = {version = "0.2", optional = true}
vega_lite_4 = {git = "https://github.com/procyon-rs/vega_lite_4.rs.git", optional = true}
showata = "0.2"
tokio = {version="0.2.11", features = ["full"]}
futures = {version="0.3.4", optional=true}
fantoccini = {version="0.12.0"}
base64 = {version="0.11.0"}
serde_json = "1.0"
retry = "1.0.0"
futures-retry = "0.5.0"
data-url = "0.1.0"

[features]
default = ["vega_lite_4"]
